test/FAIL/assertcmd/memory_match/03_test_assert.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="doesn't match the memory"
#-------

load boucle.o
assert word 15 0x1090